--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
 
+    compile 'com.github.bumptech.glide:glide:3.7.0'//图片加载
+
     compile "io.reactivex.rxjava2:rxjava:2.1.0" // 必要rxjava2依赖
     compile "io.reactivex.rxjava2:rxandroid:2.0.1" // 必要rxandrroid依赖，切线程时需要用到
     compile 'com.squareup.retrofit2:retrofit:2.3.0' // 必要retrofit依赖
