--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
 
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
+
+
     compile 'com.github.bumptech.glide:glide:3.7.0'//图片加载
 
     compile "io.reactivex.rxjava2:rxjava:2.1.0" // 必要rxjava2依赖
