图书功能的实现

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0' // 必要依赖，解析json字符所用
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1' //非必要依赖， log依赖，如果需要打印OkHttpLog需要添加
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.27'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
 
     compile('com.squareup.retrofit2:converter-simplexml:2.1.0') {
         exclude group: 'xpp3', module: 'xpp3'
