--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    repositories {
-        jcenter()
+    repositories {//这里是gradle脚本执行所需依赖，分别是对应的maven库和插件
+        jcenter()//是一个类似于github的代码托管仓库，声明了jcenter()配置，可以轻松引用 jcenter上的开源项目
         maven {
             url 'https://maven.google.com/'
-            name 'Google'
+            name 'Google'//从Android Studio3.0后新增了google()配置，可以引用google上的开源项目
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.2.0'//此处是android的插件gradle，gradle是一个强大的项目构建工具
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-allprojects {
+allprojects {//这里是项目本身需要的依赖，比如项目所需的maven库
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
@@ -26,7 +27,10 @@ allprojects {
         }
     }
 }
-
+// 运行gradle clean时，执行此处定义的task任务。
+// 该任务继承自Delete，删除根目录中的build目录。
+// 相当于执行Delete.delete(rootProject.buildDir)。
+// gradle使用groovy语言，调用method时可以不用加（）。
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
